# SafeClaw

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_REVIEW_FINDINGS.md  README.md  SAFECLAW_DEVELOPMENT_PLAN.md  docker-compose.yaml  docker-compose.yml  safeclaw-activity.mmd  safeclaw-process.drawio  safeclaw-process.mmd  safeclaw-sequence.mmd
safeclaw-service/: .dockerignore  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
safeclaw-service/docs/: configuration.md
safeclaw-service/safeclaw/: __init__.py  config.py  config_template.py  constants.py  key_crypto.py  main.py
safeclaw-service/scripts/: install.sh  setup-config.py
safeclaw-service/tests/: test_action_classifier.py  test_admin_password_hashing.py  test_api.py  test_api_key_hashing.py  test_audit.py  test_audit_db.py  test_audit_hash_chain.py  test_class_hierarchy.py  test_cli_audit.py  test_cli_llm.py  test_cli_policy.py  test_cli_pref.py  test_cli_serve.py  test_cli_status.py  test_config.py  test_confirmation_flow.py  test_connect_cmd.py  test_coverage.py  test_csrf_stability.py  test_dashboard_agents.py  test_dashboard_app.py  test_dashboard_audit.py  test_dashboard_settings.py  test_delegation_bypass.py  test_engine.py  test_engine_sanitization.py  test_glob_match.py  test_graph_builder_cache.py  test_heartbeat_monitor.py  test_inbound_governance.py  test_llm_api.py  test_llm_classification_observer.py  test_llm_client.py  test_llm_explainer.py  test_llm_integration.py  test_llm_policy_compiler.py  test_llm_prompts.py  test_llm_providers.py  test_llm_security_reviewer.py  (+26 more)
(+143 files in other folders)
